clusters/dextek/apps/network/envoy-gateway/config/internal/securitypolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.plexuz.xyz/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: internal-secure
  namespace: network
spec:
  extAuth:
    failOpen: false
    headersToExtAuth:
      - Cookie
      - Set-Cookie
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: ak-outpost-internal
          namespace: auth
          port: 9000
      path: /outpost.goauthentik.io/auth/envoy
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
